[package]
name = "paillier"
version = "0.1.0"
edition = "2024"

[dependencies]
rand08 = { package = "rand", version = "0.8" }
rand09 = { package = "rand", version = "0.9" }
crypto-primes = "0.7.0-pre.3"
crypto-bigint = "0.7.0-rc.6"
num-bigint = { version = "0.4", features = ["rand"] }
num-integer = "0.1.46"
